# cache-contention-lab

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py  websocket.py
backend/src/cache/: __init__.py  metrics.py  rwlock.py  simulation.py  store.py
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CacheViewer.tsx  EventLog.tsx  MetricsPanel.tsx  ScenarioPanel.tsx
frontend/src/hooks/: useCacheApi.ts  useWebSocket.ts
frontend/src/types/: index.ts
