[tool.poetry]
name = "cache-demo-backend"
version = "0.1.0"
description = "Thread-safe in-memory cache with contention scenario demonstrations"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = { version = "0.30.6", extras = ["standard"] }
pydantic = "2.9.2"
python-multipart = "0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
